[package]
name = "ChainHooks"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.20" , features = ["full"]}
rocksdb = "0.23.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tonic = "0.13.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
